src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithTheme/ValidWithTheme.php
<?php

namespace Valid\WithTheme;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithTheme extends PluginBundle
{
}