src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedTranslationKey2/InvalidUnexpectedTranslationKey2.php
<?php

namespace Invalid\UnexpectedTranslationKey2;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidUnexpectedTranslationKey2 extends PluginBundle
{
    public function getNameTranslationKey()
    {
        return '';
    }
}